<resources>
    <string name="app_name">ListViewShowcase</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="enter_item">Enter Item</string>
    <string name="add_item">Add list item</string>
    <string name="cancel">Cancel</string>
    <string name="ok">Ok</string>
    <string name="delete_prompt">Delete item</string>
    <string name="delete_message">Are you sure that you want to delete this item?</string>
    <string name="search">Search Item</string>
    <string name="enter_name">Enter name</string>
    <string name="enter_last_name">Enter last name</string>
    <string name="delete_item">Delete item</string>
    <string name="clear_item">Clear</string>
    <string name="reload">Reloda</string>
    <string name="no_internet_connection">No intenret connection</string>
    <string name="activate_deactivate_reload">Activate/Deactivate</string>
    <string name="reload_10">Reload on 10 sec</string>
    <string name="reload_30">reload on 30 sec</string>
    <string name="title_activity_map">MapActivity</string>
</resources>
