<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
        <EditText android:id="@+id/name"
                  android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:layout_weight=".1"
                  android:hint="@string/enter_name"/>

        <EditText android:id="@+id/last_name"
                  android:layout_weight=".1"
                  android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:hint="@string/enter_last_name"/>

    </LinearLayout>

    <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
        <Button android:id="@+id/add_person"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight=".1"
                android:text="@string/add_item"/>

        <Button android:id="@+id/delete_person"
                android:layout_width="wrap_content"
                android:layout_weight=".1"
                android:layout_height="wrap_content"
                android:text="@string/delete_item"/>
        <Button android:id="@+id/clear_person"
                android:layout_width="wrap_content"
                android:layout_weight=".1"
                android:layout_height="wrap_content"
                android:text="@string/clear_item"/>
    </LinearLayout>
</LinearLayout>